--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,20 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.8.2",
     "@prisma/client": "^4.12.0",
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "prisma": "^4.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
   }
 }
