--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
