--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.14.2",
+    "@hookform/resolvers": "^3.1.0",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    " ": "^4.1.1",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
