--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "author": "Edwin Silvestre",
