--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "postinstall": "tsc"
   },
   "author": "Edwin Silvestre",
   "license": "ISC",
