--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18.11",
+    "pnpm": ">=7.27"
+  },
   "scripts": {
-    "build": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "postinstall": "tsc"
+    "build": "esbuild index=./src --bundle --minify --outdir=dist --packages=external --platform=node"
   },
   "author": "Edwin Silvestre",
   "license": "ISC",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.8.2",
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "esbuild": "0.17.17",
     "express": "^4.18.2",
-    "prisma": "^4.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
+    "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
